[package]
name = "fractal_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
iced_wgpu = "0.9.0"
iced_winit = "0.8.0"
iced_aw = {version = "0.4", default-features = false, features = ["color_picker"]}
once_cell = "1.17.1"
iced_core = "0.8.0"
